# DepremAlarmi

./: .gitignore  README.md  pyproject.toml
src/deprem_alarmi/: cli.py  fetcher.py  main.py  processor.py
src/deprem_alarmi/alarm/: alarm.py  rules.py  sound.py
src/deprem_alarmi/deprecated/: cli.py
src/deprem_alarmi/storage/: sqlite.py
