[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deprem-alarmi"
version = "0.1.0"
description = "Real-time earthquake monitoring and alarm system based on magnitude thresholds"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "yok1rai" }
]

keywords = [
    "earthquake",
    "alarm",
    "emergency",
    "seismic",
    "monitoring",
    "turkey"
]

dependencies = [
    "requests>=2.0",
    "pygame>=2.0"
]

[project.urls]
Homepage = "https://github.com/yok1rai/DepremAlarmi"
Repository = "https://github.com/yok1rai/DepremAlarmi"
Issues = "https://github.com/yok1rai/DepremAlarmi/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[project.scripts]
deprem-alarmi = "deprem_alarmi.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

